--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <ul class="nav nav-pills pull-right">
             <li role="presentation" class="active"><a href="#">Home</a></li>
             <li role="presentation"><a href="#">About</a></li>
-            <li role="presentation"><a href="#">Contact</a></li>
+            <li role="presentation"><a href="#">About1</a></li>
           </ul>
         </nav>
         <h3 class="text-muted">Project name</h3>
